--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -5,20 +5,23 @@
 <h1>Projects</h1>
 <table>
     <tr>
-        <th>ID</th>
+        <th>No</th>
         <th>project</th>
         <th>positive Votes</th>
         <th>Ratio</th>
         <th></th>
+        <th></th>
     </tr>
     {% for project in projects %}
     <tr>
-        <td>{{project.id}}</td>
+        <td>{{forloop.counter}}</td>
         <td>{{project.title}}</td>
         <td>{{project.vote_ratio}}%</td>
         <td>{{project.vote_total}}</td>
         <td>{{project.created}}</td>
         <td><a href="{% url 'project' project.id %}">view</a></td>
+        <td><a href="{% url 'deleteproject' project.id %}">delete</a></td>
+        <td><a href="{% url 'Updateproject' project.id %}">edit</a></td>
     </tr>
     {% endfor %}
 </table>
