--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -1,5 +1,6 @@
 {% extends 'main.html' %}
 {% block content %}
+<img style = "max-width: 500px;"src = "{{project.featured_image.url}}" alt = "{{project.title}}" style = "width: 100%; height: 100%;">
 <h1>{{project.title}}</h1>
 {% for tag in tags %}
 <span style = "border: 1px solid grey;">{{tag}}</span>
