--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,4 @@
-<h1>Logo</h1>
+{% load static %}
+<img src="{% static 'images/logo.svg' %}" alt="logo" >
 <a href ="{% url 'createproject'%}">Add project</a>
 <hr>
